Fix spacing when code description is placed below

--- a/src/docs/css/main.css
+++ b/src/docs/css/main.css
@@ -618,7 +618,7 @@ header p {
 
 .developers-custom p {
   max-width: 485px;
-  margin: 0 auto 64px;
+  margin: 48px auto;
   text-align: left;
 }
 
